@@ -1,3 +1,6 @@
+Plus1 WapStart Android SDK 2.3.2, 2014-10-10
+- Added disabledOpenLinkAction feature
+
 Plus1 WapStart Android SDK 2.3.1, 2014-08-25
 - Added workaround for Google Play Market redirect links
 
